--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <!doctype html>
 <html>
   <head>
+
+
+
       <title>MY AWESOME WEBPAGE OF DOLPHINS</title>
+
+
+
   </head>
   <body>
-    MY AWESOME WEBPAGE OF DOLPHINS
-  </body>
+
+
+
+    <p>MY AWESOME WEBPAGE OF DOLPHINS. BETTER THAN YOU!!!</p>
+
+
+    <p>Don't like dolphins huh?</p>
+
+
+
+    <p><img src="dolphin_awesomeness.png"></p>
+
+
+
+    <p><iframe width="420" height="315" src="http://www.youtube.com/embed/3-vsynsE8RQ" frameborder="0" allowfullscreen></iframe></p>
+
+
+
+
+
 </html>
