Revert "This Is Awesoeme"
This reverts commit eb7401278ed51bff60cda62f146edd226916d829.

--- a/index.html
+++ b/index.html
@@ -1,33 +1,9 @@
 <!doctype html>
 <html>
   <head>
-
-
-
       <title>MY AWESOME WEBPAGE OF DOLPHINS</title>
-
-
-
   </head>
   <body>
-
-
-
-    <p>MY AWESOME WEBPAGE OF DOLPHINS. BETTER THAN YOU!!!</p>
-
-
-    <p>Don't like dolphins huh?</p>
-
-
-
-    <p><img src="dolphin_awesomeness.png"></p>
-
-
-
-    <p><iframe width="420" height="315" src="http://www.youtube.com/embed/3-vsynsE8RQ" frameborder="0" allowfullscreen></iframe></p>
-
-
-
-
-
+    MY AWESOME WEBPAGE OF DOLPHINS
+  </body>
 </html>
