--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!doctype html>
-<html>
-  <head>
-      <title>MY AWESOME WEBPAGE OF DOLPHINS</title>
-  </head>
-  <body>
-    MY AWESOME WEBPAGE OF DOLPHINS
-  </body>
-</html>
+<!DOCTYPE html>
+<title> Go away </title>
+
+<body> Go away </title
