--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title> sad dog </title>
+<img src="http://ligerworld.com/liger-united-states/liger-sinbad-national-geographic.jpg">
 <iframe width="560" height="315" src="//www.youtube.com/embed/eubWYPhcEEo" frameborder="0" allowfullscreen></iframe>
 <iframe width="560" height="315" src="//www.youtube.com/embed/7WMSQNVhMqA" frameborder="0" allowfullscreen></iframe>
 <iframe width="560" height="315" src="//www.youtube.com/embed/jcxW_ciP5R4" frameborder="0" allowfullscreen></iframe>
-<body> </body>
+<body>Hi thanks for visiting, unless your connor, then go away </body>
