--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Please type your Username and Password... </title>
-<script language="JavaScript" type="text/JavaScript" src="login.js"></script>
+<title>KNEEL BEFORE NIEL</title>
 </head>
-<body bgcolor="#eeeeee">
-<form>
-<br>
-<center>
-Username: <input type="text" name="username" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
-<br>
-Password: <input type="password" name="password" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
-<br>
-<input type="button" value="Login" onClick="Login(this.form);" style="background:#bfbfbf;color:#000000;border-color:#212121;" onMouseOver="this.style.color = '#404040';" onMouseOut="this.style.color = '#000000';" onFocusr="this.style.color = '#404040';" onBlur="this.style.color = '#000000';">
-</center>
-</form>
+<body>
+	<div style="background-color:#000000;width:368px;"><div style="padding:4px;"><iframe src="http://media.mtvnservices.com/embed/" width="360" height="293" frameborder="0"></iframe><p style="text-align:left;background-color:#FFFFFF;padding:4px;margin-top:4px;margin-bottom:0px;font-family:Arial, Helvetica, sans-serif;font-size:12px;"><b><a href="http://www.cc.com/shows/the-colbert-report">The Colbert Report</a></b><br/>Get More: <a href="http://www.comedycentral.com">Comedy Central</a>,<a href="http://www.comedycentral.com/funny-videos">Funny Videos</a>,<a href="http://www.comedycentral.com/shows">Funny TV Shows</a></p></div></div>
 </body>
-</html>
+</html>z
