--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 <body>
 	<div style="background-color:#000000;width:368px;"><div style="padding:4px;"><iframe src="http://media.mtvnservices.com/embed/" width="360" height="293" frameborder="0"></iframe><p style="text-align:left;background-color:#FFFFFF;padding:4px;margin-top:4px;margin-bottom:0px;font-family:Arial, Helvetica, sans-serif;font-size:12px;"><b><a href="http://www.cc.com/shows/the-colbert-report">The Colbert Report</a></b><br/>Get More: <a href="http://www.comedycentral.com">Comedy Central</a>,<a href="http://www.comedycentral.com/funny-videos">Funny Videos</a>,<a href="http://www.comedycentral.com/shows">Funny TV Shows</a></p></div></div>
 </body>
-</html>z
+</html>
